lex.output
Grammar

    0 $accept: Program $end

    1 Program: Function_list

    2 Function_list: Function
    3              | Function_list Function

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE Declarations Statement_list tRBRACE

    5 Type_specifier: tINT
    6               | tVOID

    7 Parameter_list: /* empty */
    8               | Parameter_declaration
    9               | Parameter_list tCOMMA Parameter_declaration

   10 Parameter_declaration: tINT tID
   11                      | tVOID

   12 Statement_list: Statement
   13               | Statement_list Statement

   14 Statement: Assignement_statement
   15          | Selection_statement
   16          | Iteration_statement
   17          | Return_statement
   18          | Print_statement

   19 Expression: Expression tADD Terme
   20           | Expression tSUB Terme
   21           | Terme

   22 Terme: Terme tMUL Facteur
   23      | Terme tDIV Facteur
   24      | Facteur

   25 Facteur: tNB
   26        | tID
   27        | tLPAR Expression tRPAR

   28 Conditions: Conditions Separator Condition
   29           | Condition
   30           | tNOT Condition

   31 Condition: tLPAR Expression Cop Expression tRPAR
   32          | Expression Cop Expression
   33          | Expression

   34 Separator: tAND
   35          | tOR

   36 Cop: tGT
   37    | tLT
   38    | tGE
   39    | tEQ
   40    | tNE
   41    | tLE

   42 Declarations: /* empty */
   43             | Declaration_list

   44 Declaration_list: Declaration_statement
   45                 | Declaration_list Declaration_statement

   46 Declaration_statement: tINT Declaration_int tSEMI
   47                      | tCONST tINT Declaration_const tSEMI

   48 Declaration_const: tID tASSIGN tNB
   49                  | tID tASSIGN tNB tCOMMA Declaration_const

   50 Declaration_int: tID
   51                | tID tASSIGN Expression
   52                | tID tASSIGN Expression tCOMMA Declaration_int
   53                | tID tCOMMA Declaration_int

   54 Selection_statement: tIF tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE Else_statement
   55                    | tIF tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE

   56 Else_statement: tELSE tLBRACE Statement_list tRBRACE

   57 Iteration_statement: tWHILE tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE

   58 Return_statement: tRETURN Expression tSEMI
   59                 | tRETURN tSEMI

   60 Print_statement: tPRINT tLPAR Expression tRPAR tSEMI

   61 Assignement_statement: tID tASSIGN Expression tSEMI


Terminals, with rules where they appear

$end (0) 0
error (256)
tINT (258) 5 10 46 47
tVOID (259) 6 11
tCONST (260) 47
tIF (261) 54 55
tELSE (262) 56
tWHILE (263) 57
tMAIN (264) 4
tRETURN (265) 58 59
tPRINT (266) 60
tADD (267) 19
tSUB (268) 20
tMUL (269) 22
tDIV (270) 23
tLT (271) 37
tGT (272) 36
tNE (273) 40
tEQ (274) 39
tGE (275) 38
tLE (276) 41
tASSIGN (277) 48 49 51 52 61
tAND (278) 34
tOR (279) 35
tNOT (280) 30
tLBRACE (281) 4 54 55 56 57
tRBRACE (282) 4 54 55 56 57
tLPAR (283) 4 27 31 54 55 57 60
tRPAR (284) 4 27 31 54 55 57 60
tSEMI (285) 46 47 58 59 60 61
tCOMMA (286) 9 49 52 53
tNB (287) 25 48 49
tID (288) 10 26 48 49 50 51 52 53 61


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
Function_list (36)
    on left: 2 3, on right: 1 3
Function (37)
    on left: 4, on right: 2 3
Type_specifier (38)
    on left: 5 6, on right: 4
Parameter_list (39)
    on left: 7 8 9, on right: 4 9
Parameter_declaration (40)
    on left: 10 11, on right: 8 9
Statement_list (41)
    on left: 12 13, on right: 4 13 54 55 56 57
Statement (42)
    on left: 14 15 16 17 18, on right: 12 13
Expression (43)
    on left: 19 20 21, on right: 19 20 27 31 32 33 51 52 58 60 61
Terme (44)
    on left: 22 23 24, on right: 19 20 21 22 23
Facteur (45)
    on left: 25 26 27, on right: 22 23 24
Conditions (46)
    on left: 28 29 30, on right: 28 54 55 57
Condition (47)
    on left: 31 32 33, on right: 28 29 30
Separator (48)
    on left: 34 35, on right: 28
Cop (49)
    on left: 36 37 38 39 40 41, on right: 31 32
Declarations (50)
    on left: 42 43, on right: 4
Declaration_list (51)
    on left: 44 45, on right: 43 45
Declaration_statement (52)
    on left: 46 47, on right: 44 45
Declaration_const (53)
    on left: 48 49, on right: 47 49
Declaration_int (54)
    on left: 50 51 52 53, on right: 46 52 53
Selection_statement (55)
    on left: 54 55, on right: 15
Else_statement (56)
    on left: 56, on right: 54
Iteration_statement (57)
    on left: 57, on right: 16
Return_statement (58)
    on left: 58 59, on right: 17
Print_statement (59)
    on left: 60, on right: 18
Assignement_statement (60)
    on left: 61, on right: 14


state 0

    0 $accept: . Program $end

    tINT   shift, and go to state 1
    tVOID  shift, and go to state 2

    Program         go to state 3
    Function_list   go to state 4
    Function        go to state 5
    Type_specifier  go to state 6


state 1

    5 Type_specifier: tINT .

    $default  reduce using rule 5 (Type_specifier)


state 2

    6 Type_specifier: tVOID .

    $default  reduce using rule 6 (Type_specifier)


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 7


state 4

    1 Program: Function_list .
    3 Function_list: Function_list . Function

    tINT   shift, and go to state 1
    tVOID  shift, and go to state 2

    $default  reduce using rule 1 (Program)

    Function        go to state 8
    Type_specifier  go to state 6


state 5

    2 Function_list: Function .

    $default  reduce using rule 2 (Function_list)


state 6

    4 Function: Type_specifier . tMAIN tLPAR Parameter_list tRPAR tLBRACE Declarations Statement_list tRBRACE

    tMAIN  shift, and go to state 9


state 7

    0 $accept: Program $end .

    $default  accept


state 8

    3 Function_list: Function_list Function .

    $default  reduce using rule 3 (Function_list)


state 9

    4 Function: Type_specifier tMAIN . tLPAR Parameter_list tRPAR tLBRACE Declarations Statement_list tRBRACE

    tLPAR  shift, and go to state 10


state 10

    4 Function: Type_specifier tMAIN tLPAR . Parameter_list tRPAR tLBRACE Declarations Statement_list tRBRACE

    tINT   shift, and go to state 11
    tVOID  shift, and go to state 12

    $default  reduce using rule 7 (Parameter_list)

    Parameter_list         go to state 13
    Parameter_declaration  go to state 14


state 11

   10 Parameter_declaration: tINT . tID

    tID  shift, and go to state 15


state 12

   11 Parameter_declaration: tVOID .

    $default  reduce using rule 11 (Parameter_declaration)


state 13

    4 Function: Type_specifier tMAIN tLPAR Parameter_list . tRPAR tLBRACE Declarations Statement_list tRBRACE
    9 Parameter_list: Parameter_list . tCOMMA Parameter_declaration

    tRPAR   shift, and go to state 16
    tCOMMA  shift, and go to state 17


state 14

    8 Parameter_list: Parameter_declaration .

    $default  reduce using rule 8 (Parameter_list)


state 15

   10 Parameter_declaration: tINT tID .

    $default  reduce using rule 10 (Parameter_declaration)


state 16

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR . tLBRACE Declarations Statement_list tRBRACE

    tLBRACE  shift, and go to state 18


state 17

    9 Parameter_list: Parameter_list tCOMMA . Parameter_declaration

    tINT   shift, and go to state 11
    tVOID  shift, and go to state 12

    Parameter_declaration  go to state 19


state 18

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE . Declarations Statement_list tRBRACE

    tINT    shift, and go to state 20
    tCONST  shift, and go to state 21

    $default  reduce using rule 42 (Declarations)

    Declarations           go to state 22
    Declaration_list       go to state 23
    Declaration_statement  go to state 24


state 19

    9 Parameter_list: Parameter_list tCOMMA Parameter_declaration .

    $default  reduce using rule 9 (Parameter_list)


state 20

   46 Declaration_statement: tINT . Declaration_int tSEMI

    tID  shift, and go to state 25

    Declaration_int  go to state 26


state 21

   47 Declaration_statement: tCONST . tINT Declaration_const tSEMI

    tINT  shift, and go to state 27


state 22

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE Declarations . Statement_list tRBRACE

    tIF      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tRETURN  shift, and go to state 30
    tPRINT   shift, and go to state 31
    tID      shift, and go to state 32

    Statement_list         go to state 33
    Statement              go to state 34
    Selection_statement    go to state 35
    Iteration_statement    go to state 36
    Return_statement       go to state 37
    Print_statement        go to state 38
    Assignement_statement  go to state 39


state 23

   43 Declarations: Declaration_list .
   45 Declaration_list: Declaration_list . Declaration_statement

    tINT    shift, and go to state 20
    tCONST  shift, and go to state 21

    $default  reduce using rule 43 (Declarations)

    Declaration_statement  go to state 40


state 24

   44 Declaration_list: Declaration_statement .

    $default  reduce using rule 44 (Declaration_list)


state 25

   50 Declaration_int: tID .
   51                | tID . tASSIGN Expression
   52                | tID . tASSIGN Expression tCOMMA Declaration_int
   53                | tID . tCOMMA Declaration_int

    tASSIGN  shift, and go to state 41
    tCOMMA   shift, and go to state 42

    $default  reduce using rule 50 (Declaration_int)


state 26

   46 Declaration_statement: tINT Declaration_int . tSEMI

    tSEMI  shift, and go to state 43


state 27

   47 Declaration_statement: tCONST tINT . Declaration_const tSEMI

    tID  shift, and go to state 44

    Declaration_const  go to state 45


state 28

   54 Selection_statement: tIF . tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE Else_statement
   55                    | tIF . tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE

    tLPAR  shift, and go to state 46


state 29

   57 Iteration_statement: tWHILE . tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE

    tLPAR  shift, and go to state 47


state 30

   58 Return_statement: tRETURN . Expression tSEMI
   59                 | tRETURN . tSEMI

    tLPAR  shift, and go to state 48
    tSEMI  shift, and go to state 49
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 52
    Terme       go to state 53
    Facteur     go to state 54


state 31

   60 Print_statement: tPRINT . tLPAR Expression tRPAR tSEMI

    tLPAR  shift, and go to state 55


state 32

   61 Assignement_statement: tID . tASSIGN Expression tSEMI

    tASSIGN  shift, and go to state 56


state 33

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE Declarations Statement_list . tRBRACE
   13 Statement_list: Statement_list . Statement

    tIF      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tRETURN  shift, and go to state 30
    tPRINT   shift, and go to state 31
    tRBRACE  shift, and go to state 57
    tID      shift, and go to state 32

    Statement              go to state 58
    Selection_statement    go to state 35
    Iteration_statement    go to state 36
    Return_statement       go to state 37
    Print_statement        go to state 38
    Assignement_statement  go to state 39


state 34

   12 Statement_list: Statement .

    $default  reduce using rule 12 (Statement_list)


state 35

   15 Statement: Selection_statement .

    $default  reduce using rule 15 (Statement)


state 36

   16 Statement: Iteration_statement .

    $default  reduce using rule 16 (Statement)


state 37

   17 Statement: Return_statement .

    $default  reduce using rule 17 (Statement)


state 38

   18 Statement: Print_statement .

    $default  reduce using rule 18 (Statement)


state 39

   14 Statement: Assignement_statement .

    $default  reduce using rule 14 (Statement)


state 40

   45 Declaration_list: Declaration_list Declaration_statement .

    $default  reduce using rule 45 (Declaration_list)


state 41

   51 Declaration_int: tID tASSIGN . Expression
   52                | tID tASSIGN . Expression tCOMMA Declaration_int

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 59
    Terme       go to state 53
    Facteur     go to state 54


state 42

   53 Declaration_int: tID tCOMMA . Declaration_int

    tID  shift, and go to state 25

    Declaration_int  go to state 60


state 43

   46 Declaration_statement: tINT Declaration_int tSEMI .

    $default  reduce using rule 46 (Declaration_statement)


state 44

   48 Declaration_const: tID . tASSIGN tNB
   49                  | tID . tASSIGN tNB tCOMMA Declaration_const

    tASSIGN  shift, and go to state 61


state 45

   47 Declaration_statement: tCONST tINT Declaration_const . tSEMI

    tSEMI  shift, and go to state 62


state 46

   54 Selection_statement: tIF tLPAR . Conditions tRPAR tLBRACE Statement_list tRBRACE Else_statement
   55                    | tIF tLPAR . Conditions tRPAR tLBRACE Statement_list tRBRACE

    tNOT   shift, and go to state 63
    tLPAR  shift, and go to state 64
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 65
    Terme       go to state 53
    Facteur     go to state 54
    Conditions  go to state 66
    Condition   go to state 67


state 47

   57 Iteration_statement: tWHILE tLPAR . Conditions tRPAR tLBRACE Statement_list tRBRACE

    tNOT   shift, and go to state 63
    tLPAR  shift, and go to state 64
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 65
    Terme       go to state 53
    Facteur     go to state 54
    Conditions  go to state 68
    Condition   go to state 67


state 48

   27 Facteur: tLPAR . Expression tRPAR

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 69
    Terme       go to state 53
    Facteur     go to state 54


state 49

   59 Return_statement: tRETURN tSEMI .

    $default  reduce using rule 59 (Return_statement)


state 50

   25 Facteur: tNB .

    $default  reduce using rule 25 (Facteur)


state 51

   26 Facteur: tID .

    $default  reduce using rule 26 (Facteur)


state 52

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   58 Return_statement: tRETURN Expression . tSEMI

    tADD   shift, and go to state 70
    tSUB   shift, and go to state 71
    tSEMI  shift, and go to state 72


state 53

   21 Expression: Terme .
   22 Terme: Terme . tMUL Facteur
   23      | Terme . tDIV Facteur

    tMUL  shift, and go to state 73
    tDIV  shift, and go to state 74

    $default  reduce using rule 21 (Expression)


state 54

   24 Terme: Facteur .

    $default  reduce using rule 24 (Terme)


state 55

   60 Print_statement: tPRINT tLPAR . Expression tRPAR tSEMI

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 75
    Terme       go to state 53
    Facteur     go to state 54


state 56

   61 Assignement_statement: tID tASSIGN . Expression tSEMI

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 76
    Terme       go to state 53
    Facteur     go to state 54


state 57

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE Declarations Statement_list tRBRACE .

    $default  reduce using rule 4 (Function)


state 58

   13 Statement_list: Statement_list Statement .

    $default  reduce using rule 13 (Statement_list)


state 59

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   51 Declaration_int: tID tASSIGN Expression .
   52                | tID tASSIGN Expression . tCOMMA Declaration_int

    tADD    shift, and go to state 70
    tSUB    shift, and go to state 71
    tCOMMA  shift, and go to state 77

    $default  reduce using rule 51 (Declaration_int)


state 60

   53 Declaration_int: tID tCOMMA Declaration_int .

    $default  reduce using rule 53 (Declaration_int)


state 61

   48 Declaration_const: tID tASSIGN . tNB
   49                  | tID tASSIGN . tNB tCOMMA Declaration_const

    tNB  shift, and go to state 78


state 62

   47 Declaration_statement: tCONST tINT Declaration_const tSEMI .

    $default  reduce using rule 47 (Declaration_statement)


state 63

   30 Conditions: tNOT . Condition

    tLPAR  shift, and go to state 64
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 65
    Terme       go to state 53
    Facteur     go to state 54
    Condition   go to state 79


state 64

   27 Facteur: tLPAR . Expression tRPAR
   31 Condition: tLPAR . Expression Cop Expression tRPAR

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 80
    Terme       go to state 53
    Facteur     go to state 54


state 65

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   32 Condition: Expression . Cop Expression
   33          | Expression .

    tADD  shift, and go to state 70
    tSUB  shift, and go to state 71
    tLT   shift, and go to state 81
    tGT   shift, and go to state 82
    tNE   shift, and go to state 83
    tEQ   shift, and go to state 84
    tGE   shift, and go to state 85
    tLE   shift, and go to state 86

    $default  reduce using rule 33 (Condition)

    Cop  go to state 87


state 66

   28 Conditions: Conditions . Separator Condition
   54 Selection_statement: tIF tLPAR Conditions . tRPAR tLBRACE Statement_list tRBRACE Else_statement
   55                    | tIF tLPAR Conditions . tRPAR tLBRACE Statement_list tRBRACE

    tAND   shift, and go to state 88
    tOR    shift, and go to state 89
    tRPAR  shift, and go to state 90

    Separator  go to state 91


state 67

   29 Conditions: Condition .

    $default  reduce using rule 29 (Conditions)


state 68

   28 Conditions: Conditions . Separator Condition
   57 Iteration_statement: tWHILE tLPAR Conditions . tRPAR tLBRACE Statement_list tRBRACE

    tAND   shift, and go to state 88
    tOR    shift, and go to state 89
    tRPAR  shift, and go to state 92

    Separator  go to state 91


state 69

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   27 Facteur: tLPAR Expression . tRPAR

    tADD   shift, and go to state 70
    tSUB   shift, and go to state 71
    tRPAR  shift, and go to state 93


state 70

   19 Expression: Expression tADD . Terme

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Terme    go to state 94
    Facteur  go to state 54


state 71

   20 Expression: Expression tSUB . Terme

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Terme    go to state 95
    Facteur  go to state 54


state 72

   58 Return_statement: tRETURN Expression tSEMI .

    $default  reduce using rule 58 (Return_statement)


state 73

   22 Terme: Terme tMUL . Facteur

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Facteur  go to state 96


state 74

   23 Terme: Terme tDIV . Facteur

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Facteur  go to state 97


state 75

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   60 Print_statement: tPRINT tLPAR Expression . tRPAR tSEMI

    tADD   shift, and go to state 70
    tSUB   shift, and go to state 71
    tRPAR  shift, and go to state 98


state 76

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   61 Assignement_statement: tID tASSIGN Expression . tSEMI

    tADD   shift, and go to state 70
    tSUB   shift, and go to state 71
    tSEMI  shift, and go to state 99


state 77

   52 Declaration_int: tID tASSIGN Expression tCOMMA . Declaration_int

    tID  shift, and go to state 25

    Declaration_int  go to state 100


state 78

   48 Declaration_const: tID tASSIGN tNB .
   49                  | tID tASSIGN tNB . tCOMMA Declaration_const

    tCOMMA  shift, and go to state 101

    $default  reduce using rule 48 (Declaration_const)


state 79

   30 Conditions: tNOT Condition .

    $default  reduce using rule 30 (Conditions)


state 80

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   27 Facteur: tLPAR Expression . tRPAR
   31 Condition: tLPAR Expression . Cop Expression tRPAR

    tADD   shift, and go to state 70
    tSUB   shift, and go to state 71
    tLT    shift, and go to state 81
    tGT    shift, and go to state 82
    tNE    shift, and go to state 83
    tEQ    shift, and go to state 84
    tGE    shift, and go to state 85
    tLE    shift, and go to state 86
    tRPAR  shift, and go to state 93

    Cop  go to state 102


state 81

   37 Cop: tLT .

    $default  reduce using rule 37 (Cop)


state 82

   36 Cop: tGT .

    $default  reduce using rule 36 (Cop)


state 83

   40 Cop: tNE .

    $default  reduce using rule 40 (Cop)


state 84

   39 Cop: tEQ .

    $default  reduce using rule 39 (Cop)


state 85

   38 Cop: tGE .

    $default  reduce using rule 38 (Cop)


state 86

   41 Cop: tLE .

    $default  reduce using rule 41 (Cop)


state 87

   32 Condition: Expression Cop . Expression

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 103
    Terme       go to state 53
    Facteur     go to state 54


state 88

   34 Separator: tAND .

    $default  reduce using rule 34 (Separator)


state 89

   35 Separator: tOR .

    $default  reduce using rule 35 (Separator)


state 90

   54 Selection_statement: tIF tLPAR Conditions tRPAR . tLBRACE Statement_list tRBRACE Else_statement
   55                    | tIF tLPAR Conditions tRPAR . tLBRACE Statement_list tRBRACE

    tLBRACE  shift, and go to state 104


state 91

   28 Conditions: Conditions Separator . Condition

    tLPAR  shift, and go to state 64
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 65
    Terme       go to state 53
    Facteur     go to state 54
    Condition   go to state 105


state 92

   57 Iteration_statement: tWHILE tLPAR Conditions tRPAR . tLBRACE Statement_list tRBRACE

    tLBRACE  shift, and go to state 106


state 93

   27 Facteur: tLPAR Expression tRPAR .

    $default  reduce using rule 27 (Facteur)


state 94

   19 Expression: Expression tADD Terme .
   22 Terme: Terme . tMUL Facteur
   23      | Terme . tDIV Facteur

    tMUL  shift, and go to state 73
    tDIV  shift, and go to state 74

    $default  reduce using rule 19 (Expression)


state 95

   20 Expression: Expression tSUB Terme .
   22 Terme: Terme . tMUL Facteur
   23      | Terme . tDIV Facteur

    tMUL  shift, and go to state 73
    tDIV  shift, and go to state 74

    $default  reduce using rule 20 (Expression)


state 96

   22 Terme: Terme tMUL Facteur .

    $default  reduce using rule 22 (Terme)


state 97

   23 Terme: Terme tDIV Facteur .

    $default  reduce using rule 23 (Terme)


state 98

   60 Print_statement: tPRINT tLPAR Expression tRPAR . tSEMI

    tSEMI  shift, and go to state 107


state 99

   61 Assignement_statement: tID tASSIGN Expression tSEMI .

    $default  reduce using rule 61 (Assignement_statement)


state 100

   52 Declaration_int: tID tASSIGN Expression tCOMMA Declaration_int .

    $default  reduce using rule 52 (Declaration_int)


state 101

   49 Declaration_const: tID tASSIGN tNB tCOMMA . Declaration_const

    tID  shift, and go to state 44

    Declaration_const  go to state 108


state 102

   31 Condition: tLPAR Expression Cop . Expression tRPAR

    tLPAR  shift, and go to state 48
    tNB    shift, and go to state 50
    tID    shift, and go to state 51

    Expression  go to state 109
    Terme       go to state 53
    Facteur     go to state 54


state 103

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   32 Condition: Expression Cop Expression .

    tADD  shift, and go to state 70
    tSUB  shift, and go to state 71

    $default  reduce using rule 32 (Condition)


state 104

   54 Selection_statement: tIF tLPAR Conditions tRPAR tLBRACE . Statement_list tRBRACE Else_statement
   55                    | tIF tLPAR Conditions tRPAR tLBRACE . Statement_list tRBRACE

    tIF      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tRETURN  shift, and go to state 30
    tPRINT   shift, and go to state 31
    tID      shift, and go to state 32

    Statement_list         go to state 110
    Statement              go to state 34
    Selection_statement    go to state 35
    Iteration_statement    go to state 36
    Return_statement       go to state 37
    Print_statement        go to state 38
    Assignement_statement  go to state 39


state 105

   28 Conditions: Conditions Separator Condition .

    $default  reduce using rule 28 (Conditions)


state 106

   57 Iteration_statement: tWHILE tLPAR Conditions tRPAR tLBRACE . Statement_list tRBRACE

    tIF      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tRETURN  shift, and go to state 30
    tPRINT   shift, and go to state 31
    tID      shift, and go to state 32

    Statement_list         go to state 111
    Statement              go to state 34
    Selection_statement    go to state 35
    Iteration_statement    go to state 36
    Return_statement       go to state 37
    Print_statement        go to state 38
    Assignement_statement  go to state 39


state 107

   60 Print_statement: tPRINT tLPAR Expression tRPAR tSEMI .

    $default  reduce using rule 60 (Print_statement)


state 108

   49 Declaration_const: tID tASSIGN tNB tCOMMA Declaration_const .

    $default  reduce using rule 49 (Declaration_const)


state 109

   19 Expression: Expression . tADD Terme
   20           | Expression . tSUB Terme
   31 Condition: tLPAR Expression Cop Expression . tRPAR

    tADD   shift, and go to state 70
    tSUB   shift, and go to state 71
    tRPAR  shift, and go to state 112


state 110

   13 Statement_list: Statement_list . Statement
   54 Selection_statement: tIF tLPAR Conditions tRPAR tLBRACE Statement_list . tRBRACE Else_statement
   55                    | tIF tLPAR Conditions tRPAR tLBRACE Statement_list . tRBRACE

    tIF      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tRETURN  shift, and go to state 30
    tPRINT   shift, and go to state 31
    tRBRACE  shift, and go to state 113
    tID      shift, and go to state 32

    Statement              go to state 58
    Selection_statement    go to state 35
    Iteration_statement    go to state 36
    Return_statement       go to state 37
    Print_statement        go to state 38
    Assignement_statement  go to state 39


state 111

   13 Statement_list: Statement_list . Statement
   57 Iteration_statement: tWHILE tLPAR Conditions tRPAR tLBRACE Statement_list . tRBRACE

    tIF      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tRETURN  shift, and go to state 30
    tPRINT   shift, and go to state 31
    tRBRACE  shift, and go to state 114
    tID      shift, and go to state 32

    Statement              go to state 58
    Selection_statement    go to state 35
    Iteration_statement    go to state 36
    Return_statement       go to state 37
    Print_statement        go to state 38
    Assignement_statement  go to state 39


state 112

   31 Condition: tLPAR Expression Cop Expression tRPAR .

    $default  reduce using rule 31 (Condition)


state 113

   54 Selection_statement: tIF tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE . Else_statement
   55                    | tIF tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE .

    tELSE  shift, and go to state 115

    $default  reduce using rule 55 (Selection_statement)

    Else_statement  go to state 116


state 114

   57 Iteration_statement: tWHILE tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE .

    $default  reduce using rule 57 (Iteration_statement)


state 115

   56 Else_statement: tELSE . tLBRACE Statement_list tRBRACE

    tLBRACE  shift, and go to state 117


state 116

   54 Selection_statement: tIF tLPAR Conditions tRPAR tLBRACE Statement_list tRBRACE Else_statement .

    $default  reduce using rule 54 (Selection_statement)


state 117

   56 Else_statement: tELSE tLBRACE . Statement_list tRBRACE

    tIF      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tRETURN  shift, and go to state 30
    tPRINT   shift, and go to state 31
    tID      shift, and go to state 32

    Statement_list         go to state 118
    Statement              go to state 34
    Selection_statement    go to state 35
    Iteration_statement    go to state 36
    Return_statement       go to state 37
    Print_statement        go to state 38
    Assignement_statement  go to state 39


state 118

   13 Statement_list: Statement_list . Statement
   56 Else_statement: tELSE tLBRACE Statement_list . tRBRACE

    tIF      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tRETURN  shift, and go to state 30
    tPRINT   shift, and go to state 31
    tRBRACE  shift, and go to state 119
    tID      shift, and go to state 32

    Statement              go to state 58
    Selection_statement    go to state 35
    Iteration_statement    go to state 36
    Return_statement       go to state 37
    Print_statement        go to state 38
    Assignement_statement  go to state 39


state 119

   56 Else_statement: tELSE tLBRACE Statement_list tRBRACE .

    $default  reduce using rule 56 (Else_statement)
